@@ -3734,7 +3734,7 @@ public class Matches
 		};
 	}
 	
-	public static Match<Territory> airCanLandOnThisAlliedNonConqueredNonPendingLandTerritory(final PlayerID player, final GameData data)
+	public static Match<Territory> airCanLandOnThisAlliedNonConqueredLandTerritory(final PlayerID player, final GameData data)
 	{
 		return new Match<Territory>()
 		{
@@ -3746,8 +3746,10 @@ public class Matches
 				final BattleTracker bt = MoveDelegate.getBattleTracker(data);
 				if (bt.wasConquered(t))
 					return false;
-				if (bt.hasPendingBattle(t, false))
-					return false;
+				// I can't think of why we have this... If there is a pending battle, and the owner is enemy, then we will be prevented from landing when we check the owner. And if the owner is us, we will be prevented from landing if we have conquered it.
+				// So this seems like duplication. I will comment out, because if we have taken over a territory from a friendly neutral, we should be allowed to land there.
+				// if (bt.hasPendingBattle(t, false))
+				// return false;
 				final PlayerID owner = t.getOwner();
 				if (owner == null || owner.isNull())
 					return false;
